<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.svmdev.meunchworlds.view.novo.NovoActivity"
        android:background="@drawable/fundo2">

    <android.support.design.widget.AppBarLayout
            android:id="@+id/novo_appbarlayout_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/novo_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleTextColor="@android:color/white"
                tools:title="@string/novo_toolbar"/>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:srcCompat="@drawable/n7logo"
            android:id="@+id/novo_img"
            app:layout_constraintEnd_toStartOf="@+id/novo_gdl_v17"
            app:layout_constraintStart_toStartOf="@+id/novo_gdl_v03"
            app:layout_constraintBottom_toTopOf="@+id/novo_gdl_h10"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="@+id/novo_gdl_h02"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>

    <android.support.v7.widget.AppCompatEditText
            android:id="@+id/novo_nome"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:hint="@string/novo_hint_nome"
            android:inputType="textCapWords"
            android:textColor="@color/corBranca"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="@+id/novo_gdl_v02"
            app:layout_constraintEnd_toStartOf="@+id/novo_gdl_v18"
            app:layout_constraintTop_toTopOf="@+id/novo_gdl_h10"
            app:layout_constraintBottom_toTopOf="@+id/novo_gdl_h12"
            android:textColorHint="@android:color/darker_gray"/>

    <RadioGroup
            android:id="@+id/novo_genero_group_m"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintBottom_toTopOf="@+id/novo_gdl_h15"
            app:layout_constraintEnd_toStartOf="@+id/novo_gdl_v18"
            app:layout_constraintStart_toStartOf="@+id/novo_gdl_v02"
            app:layout_constraintTop_toTopOf="@+id/novo_gdl_h12"
            android:orientation="vertical"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp">

        <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/novo_unk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/novo_radio_u"
                android:textColor="@color/corBranca"
                android:layout_weight="1"
                android:checked="true"
                android:theme="@style/RadioButton"/>

        <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/novo_male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/novo_radio_m"
                android:textColor="@color/corBranca"
                android:layout_weight="1"
                android:checked="false"
                android:theme="@style/RadioButton"/>

        <android.support.v7.widget.AppCompatRadioButton
                android:text="@string/novo_female"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/novo_radio_f"
                android:textColor="@color/corBranca"
                android:layout_weight="1"
                android:theme="@style/RadioButton"/>
    </RadioGroup>

    <android.support.v7.widget.AppCompatSpinner
            android:layout_width="0dp"
            android:id="@+id/novo_selectclasse"
            android:layout_height="0dp"
            android:background="@android:color/white"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/novo_gdl_h16"
            app:layout_constraintEnd_toStartOf="@+id/novo_gdl_v17" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="@+id/novo_gdl_v03" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="@+id/novo_gdl_h15"/>

    <android.support.v7.widget.AppCompatButton
            android:text="@string/novo_salvar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/novo_btn_salvar"
            android:background="@drawable/btn_vermelho"
            android:textColor="@color/corBranca"
            android:textSize="18sp"
            app:layout_constraintTop_toTopOf="@+id/novo_gdl_h16"
            app:layout_constraintEnd_toStartOf="@+id/novo_gdl_v14"
            app:layout_constraintStart_toStartOf="@+id/novo_gdl_v06"
            app:layout_constraintBottom_toTopOf="@+id/novo_gdl_h18"
            android:layout_margin="5dp"/>

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/novo_progresso"
            android:theme="@style/ProgressBar"
            app:layout_constraintTop_toTopOf="@+id/novo_gdl_h18"
            app:layout_constraintEnd_toStartOf="@+id/novo_gdl_v14"
            app:layout_constraintStart_toStartOf="@+id/novo_gdl_v06"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/novo_gdl_h02"
            app:layout_constraintGuide_percent="0.10"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/novo_gdl_h10"
            app:layout_constraintGuide_percent="0.50"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/novo_gdl_h11"
            app:layout_constraintGuide_percent="0.55"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/novo_gdl_h12"
            app:layout_constraintGuide_percent="0.60"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/novo_gdl_h15"
            app:layout_constraintGuide_percent="0.75"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/novo_gdl_h16"
            app:layout_constraintGuide_percent="0.84"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/novo_gdl_h18"
            app:layout_constraintGuide_percent="0.92"/>

    <!-- vertical -->

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/novo_gdl_v02"
            app:layout_constraintGuide_percent="0.10"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/novo_gdl_v03"
            app:layout_constraintGuide_percent="0.15"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/novo_gdl_v06"
            app:layout_constraintGuide_percent="0.30"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/novo_gdl_v14"
            app:layout_constraintGuide_percent="0.70"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/novo_gdl_v17"
            app:layout_constraintGuide_percent="0.85"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/novo_gdl_v18"
            app:layout_constraintGuide_percent="0.90"/>

</android.support.constraint.ConstraintLayout>
