<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.inicio.InicioActivity" android:background="@drawable/launch_screen">

    <android.support.v7.widget.AppCompatImageView
            android:src="@drawable/melogo"
            android:id="@+id/inicio_logo"
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/inicio_gdl_h03"/>

    <android.support.v7.widget.AppCompatImageView
            android:src="@drawable/n7logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_img_perfil"
            app:layout_constraintTop_toTopOf="@+id/inicio_gdl_h05"
            app:layout_constraintBottom_toTopOf="@+id/inicio_gdl_h11"
            app:layout_constraintStart_toStartOf="@+id/inicio_gdl_v03"
            app:layout_constraintEnd_toStartOf="@+id/inicio_gdl_v17"/>

    <android.support.v7.widget.AppCompatTextView
            android:id="@+id/inicio_txt_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inicio_texto"
            android:textAlignment="center"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="18sp"
            android:textStyle="bold|italic"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintStart_toStartOf="@+id/inicio_gdl_v03"
            app:layout_constraintEnd_toStartOf="@+id/inicio_gdl_v17"
            app:layout_constraintTop_toTopOf="@+id/inicio_gdl_h11"
            app:layout_constraintBottom_toTopOf="@+id/inicio_selectperso" android:layout_marginTop="2dp"/>

    <android.support.v7.widget.AppCompatSpinner
            android:layout_width="0dp"
            android:id="@+id/inicio_selectperso"
            app:layout_constraintBottom_toTopOf="@+id/inicio_gdl_h14"
            app:layout_constraintTop_toTopOf="@+id/inicio_gdl_h12"
            app:layout_constraintStart_toStartOf="@+id/inicio_gdl_v03"
            app:layout_constraintEnd_toStartOf="@+id/inicio_gdl_v17"
            android:layout_height="0dp"
            android:background="@android:color/white" android:layout_marginBottom="20dp"
    />

    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/inicio_progresso"
            android:theme="@style/ProgressBarB"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/inicio_gdl_h16"
            app:layout_constraintTop_toTopOf="@+id/inicio_gdl_h14"
            app:layout_constraintEnd_toStartOf="@+id/inicio_btn_criar"
            app:layout_constraintStart_toEndOf="@+id/inicio_btn_entrar"/>

    <android.support.v7.widget.AppCompatButton
            android:text="@string/inicio_btnentrar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_btn_entrar"
            android:layout_margin="10dp"
            android:background="@drawable/btn_cinza"
            android:textColor="@color/corBranca"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/inicio_gdl_v01"
            app:layout_constraintTop_toTopOf="@+id/inicio_gdl_h14"
            app:layout_constraintBottom_toTopOf="@+id/inicio_gdl_h16"
            app:layout_constraintEnd_toStartOf="@+id/inicio_gdl_v09"
    />

    <android.support.v7.widget.AppCompatButton
            android:text="@string/inicio_btncriar"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_btn_criar"
            android:layout_margin="10dp"
            android:background="@drawable/btn_azul"
            android:textColor="@color/corBranca"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/inicio_gdl_v11"
            app:layout_constraintTop_toTopOf="@+id/inicio_gdl_h14"
            app:layout_constraintBottom_toTopOf="@+id/inicio_gdl_h16"
            app:layout_constraintEnd_toStartOf="@+id/inicio_gdl_v19"
    />

    <android.support.v7.widget.AppCompatButton
            android:text="@string/inicio_btnsobre"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_btn_sobre"
            app:layout_constraintBottom_toTopOf="@+id/inicio_gdl_h19"
            app:layout_constraintEnd_toStartOf="@+id/inicio_gdl_v14"
            app:layout_constraintStart_toStartOf="@+id/inicio_gdl_v06"
            app:layout_constraintTop_toTopOf="@+id/inicio_gdl_h17"
            android:layout_margin="10dp"
            android:background="@drawable/btn_verde"
            android:textColor="@color/corBranca"
            android:textSize="18sp"/>

    <!-- horizontal -->
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_h03"
            app:layout_constraintGuide_percent="0.15"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_h05"
            app:layout_constraintGuide_percent="0.25"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_h06"
            app:layout_constraintGuide_percent="0.30"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_h07"
            app:layout_constraintGuide_percent="0.35"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_h08"
            app:layout_constraintGuide_percent="0.40"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_h09"
            app:layout_constraintGuide_percent="0.45"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_h10"
            app:layout_constraintGuide_percent="0.50"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_h11"
            app:layout_constraintGuide_percent="0.55"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_h12"
            app:layout_constraintGuide_percent="0.60"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_h14"
            app:layout_constraintGuide_percent="0.70"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_h16"
            app:layout_constraintGuide_percent="0.80"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_h17"
            app:layout_constraintGuide_percent="0.85"/>

    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_h19"
            app:layout_constraintGuide_percent="0.95"/>

    <!-- vertical -->
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_v01"
            app:layout_constraintGuide_percent="0.05"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_v03"
            app:layout_constraintGuide_percent="0.15"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_v04"
            app:layout_constraintGuide_percent="0.20"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_v06"
            app:layout_constraintGuide_percent="0.30"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_v09"
            app:layout_constraintGuide_percent="0.45"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_v11"
            app:layout_constraintGuide_percent="0.55"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_v14"
            app:layout_constraintGuide_percent="0.70"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_v15"
            app:layout_constraintGuide_percent="0.75"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_v17"
            app:layout_constraintGuide_percent="0.85"/>

    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/inicio_gdl_v19"
            app:layout_constraintGuide_percent="0.95"/>

</android.support.constraint.ConstraintLayout>